# Vadi-Pehn

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PRD.md  PROJECT.md  README.md  SystemDesign.md  audit-memory-hybrid-rag.md  audit-safety-failclosed.md  audit-sibling-training-and-alignment.md  docker-compose.yml  nginx.conf  pyrightconfig.json  results.tsv  start_desktop.py  vadi.ps1
.agents/: AGENTS.md  GUARDRAILS.md  ORIGINAL_REQUEST.md
.agents/auditor_m1_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m2_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m3_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  vadi-pehn-development.md
.agents/auditor_m3_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m3_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m4_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m4_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m5_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  vadi-pehn-development.md
.agents/auditor_m5_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m5_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m6_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m3_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  test_fallback_empirical.py
.agents/challenger_m3_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  test_child_js.py
.agents/challenger_m3_refine/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
db/: seed_synthetic_data.py
docs/: PILOT_READINESS.md
dry_run_checkpoints/: dry_run_results.tsv
eval/: conftest.py  test_safety_eval_runner.py
infra/: .env.staging.example  README.md  docker-compose.dev.yml  docker-compose.mvp.yml  docker-compose.yml
scratch/: test_diversity.py  test_e2e_turn.py
scripts/: migrate_cloud_db.py
services/: abstractions.py  config.py  logging_config.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/api_gateway/: __init__.py  auth.py  identity_store.py  main.py
services/api-gateway/tests/: conftest.py  test_api_gateway.py  test_auth_endpoints.py  test_challenger_m1_2_empirical.py  test_challenger_m1_mounts.py  test_desktop_routes.py  test_role_auth.py
services/dashboard-bff/: Dockerfile  pyproject.toml
services/dashboard-bff/src/dashboard_bff/: admin_observability.py  main.py  models.py  repository.py
services/dashboard-bff/tests/: conftest.py  test_challenger_guardian_empirical.py  test_dashboard.py
services/governance-service/: Dockerfile  pyproject.toml
services/governance-service/src/governance_service/: abstractions.py  consent_ledger.py  incident_queue.py  main.py  models.py  retention.py
services/governance-service/tests/: conftest.py  test_governance.py
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/src/ingestion_service/: __init__.py  main.py  service.py
services/ingestion-service/tests/: test_ingestion.py
services/memory-service/: Dockerfile  pyproject.toml
services/memory-service/src/memory_service/: __init__.py  abstractions.py  benchmark.py  chunker.py  context.py  embeddings.py  main.py  query_transform.py  retrieval.py  store.py  write_pipeline.py
services/memory-service/tests/: conftest.py  mock_db.py  test_async_writer_consent.py  test_benchmark.py  test_chunker.py  test_contextual_rapport.py  test_embeddings.py  test_migration_continuity.py  test_retrieval_hybrid.py  test_store.py
services/orchestration/: Dockerfile  pyproject.toml
services/orchestration/personas/: agri_bot.jinja2  agritech_specialist.jinja2  artist.jinja2  arts_design.jinja2  biz_entr.jinja2  data_scientist.jinja2  doctor.jinja2  edu_teach.jinja2  engineer.jinja2  gov_officer.jinja2  health_nurse.jinja2  robotics_engineer.jinja2  sibling.jinja2  tech_dev.jinja2  trades_elec.jinja2
services/orchestration/src/orchestration/: graph.py  llm_client.py  main.py  ollama_client.py  retrieval.py  token_optimizer.py
services/orchestration/tests/: test_challenger_m6_2_adversarial.py  test_graph.py  test_graph_rag_integration.py  test_memory_rag_e2e.py
services/panel-service/: Dockerfile  pyproject.toml
services/panel-service/src/panel_service/: abstractions.py  crew.py  curator_agent.py  diversity.py  fact_validator.py  main.py  models.py  professional_agent.py  slm_ocr.py
services/panel-service/tests/: test_panel.py  test_panel_speech.py
services/safety-proxy/: Dockerfile  config.yml  pyproject.toml
services/safety-proxy/rails/: child_safety.co
services/safety-proxy/src/safety_proxy/: actions.py  client.py  main.py
services/safety-proxy/tests/: test_network_topology.py  test_safety_proxy.py
services/sibling-training/: pyproject.toml
services/sibling-training/dry_run_checkpoints/: dry_run_results.tsv
services/sibling-training/src/sibling_training/: __init__.py  abstractions.py  autoresearch.py  grpo_trainer.py  pii_scrubber.py  reward.py  sft_trainer.py
services/sibling-training/tests/: test_autoresearch.py  test_challenger_m5_empirical.py  test_grpo_trainer.py  test_pii_scrubber.py  test_reward_model.py  test_sft_trainer.py  test_sft_trainer_dryrun.py
services/voice-gateway/: Dockerfile  pyproject.toml
services/voice-gateway/src/voice_gateway/: abstractions.py  main.py  models.py  orchestration_client.py  pipeline.py  providers.py  room_manager.py  stt.py  tts.py  vad.py
services/voice-gateway/tests/: test_challenger_voice_empirical.py  test_pipeline.py  test_providers.py
tests/: test_deployment_canonicalization.py  test_safety_keywords.py
vadi-pehn-antigravity/: AGENTS.md  GUARDRAILS.md  README.md
webapp/: app.js  index.html  login.html  signup.html  styles.css
(+284 files in other folders)
