[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-dashboard-bff"
version = "0.1.0"
description = "Guardian & Admin Dashboard BFF (Backend-For-Frontend) — Vadi-Pehn (SD §4.5, PRD §2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]
