[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-governance-service"
version = "0.1.0"
description = "Governance Service (Consent Ledger, Safety Incidents, 15-min SLA, Retentions) — Vadi-Pehn (SD §3.4, PRD §3)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]
