[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-memory-service"
version = "0.1.0"
description = "Multi-tenant RLS-enforced memory service for Vadi-Pehn (SD §3.2, §7)"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
