[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-orchestration"
version = "0.1.0"
description = "LangGraph session orchestration service — Vadi-Pehn (SD §5.1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "jinja2>=3.1",
    "redis>=5.0",
    "langfuse>=2.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]
