[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-safety-proxy"
version = "0.1.0"
description = "NeMo Guardrails reverse proxy with fail-closed Llama-Guard wiring (PRD §8, SD §4.3)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
