[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-sibling-training"
version = "0.1.0"
description = "Sibling LLM Fine-Tuning (SFT) and RLHF/GRPO Alignment Service (PRD §8, SD §10)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]
