[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vadi-pehn-voice-gateway"
version = "0.1.0"
description = "WebRTC voice gateway (LiveKit + VAD + STT + TTS) — Vadi-Pehn (SD §4.2, PRD §6)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "livekit-api>=1.0",
    "livekit>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]
